--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Spenden</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.delivry.org/bootstrap/4.4.1/css/bootstrap.min.css">
   </head>
   <body>
     <div class="container">
