--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="container">
       <h1>Spenden</h1>
       <div class="container">
-        <script src="https://donorbox.org/widget.js" paypalExpress="false"></script><iframe allowpaymentrequest="" frameborder="0" height="900px" name="donorbox" scrolling="no" seamless="seamless" src="https://donorbox.org/embed/digitalpiloten" style="max-width: 500px; min-width: 310px; max-height:none!important" width="100%"></iframe>
+        <center>
+          <script src="https://donorbox.org/widget.js" paypalExpress="false"></script><iframe allowpaymentrequest="" frameborder="0" height="900px" name="donorbox" scrolling="no" seamless="seamless" src="https://donorbox.org/embed/digitalpiloten" style="max-width: 500px; min-width: 310px; max-height:none!important" width="100%"></iframe>
+        </center>
       </div>
     </div>
   </body>
