--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
     <div class="container">
       <h1>Spenden</h1>
       <div class="container">
-        <center>
-          <script src="https://donorbox.org/widget.js" paypalExpress="false"></script><iframe allowpaymentrequest="" frameborder="0" height="900px" name="donorbox" scrolling="no" seamless="seamless" src="https://donorbox.org/embed/digitalpiloten" style="max-width: 500px; min-width: 310px; max-height:none!important" width="100%"></iframe>
-        </center>
+        <div class="row">
+          <div class="col-6">
+            <h2>Banküberweisung</h2>
+            <p>
+              <b>IBAN:</b> DE000000000<br>
+            </p>
+          </div>
+          <div class="col-6">
+            <h2>Kreditkarte & Paypal</h2>
+            <!--<center>-->
+              <script src="https://donorbox.org/widget.js" paypalExpress="false"></script><iframe allowpaymentrequest="" frameborder="0" height="900px" name="donorbox" scrolling="no" seamless="seamless" src="https://donorbox.org/embed/digitalpiloten" style="max-width: 500px; min-width: 310px; max-height:none!important" width="100%"></iframe>
+            <!--</center>-->
+          </div>
+        </div>
       </div>
     </div>
   </body>
